2008-10-18  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/project-manager/plugin.c,
	plugins/file-wizard/file.c,
	libanjuta/interfaces/libanjuta.idl:
	Fix #545668 - new file are not added correctly to the project

2008-10-18  Johannes Schmid  <jhs@idefix>

	* plugins/document-manager/anjuta-docman.c
	(anjuta_docman_get_pixbuf_for_file), (anjuta_docman_page_init),
	(anjuta_docman_save_document_as):
	Fixed #545668 – file's icon not correctly updated on tabs-right-click

2008-10-17  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/debug-manager/start.c,
	plugins/build-basic-autotools/plugin.c:
	Debugger was unable to start if build and source directory are
	different

2008-10-17  Johannes Schmid  <jhs@gnome.org>

	* plugins/document-manager/anjuta-docman.c
	(on_notebook_switch_page), (anjuta_docman_add_document),
	(anjuta_docman_set_current_document):
	#556053 – closing file tabs disable 'save button'

2008-10-16  Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/class-inheritance/class-callbacks.c
	(on_toggled_menuitem_clicked), (on_member_menuitem_clicked),
	(on_nodedata_expanded_event):
	* plugins/class-inheritance/class-inherit.c
	(cls_inherit_nodestatus_destroy), (gtree_compare_func),
	(class_inheritance_create_agnode_key_name),
	(class_inheritance_get_symbol_from_agnode_key_name),
	(class_inheritance_show_dynamic_class_popup_menu),
	(cls_inherit_nodedata_destroy), (cls_inherit_add_node),
	(cls_inherit_add_edge), (cls_inherit_draw_expanded_node),
	(cls_inherit_draw_single_node), (cls_inherit_draw_graph),
	(class_inheritance_update_graph), (class_inheritance_gtree_clear),
	(class_inheritance_base_gui_init):
	* plugins/class-inheritance/class-inherit.h:
	* plugins/class-inheritance/plugin.c (project_root_removed),
	(deactivate_plugin):
	* plugins/class-inheritance/plugin.h:
	* plugins/symbol-db/symbol-db-engine-iterator-node.c
	(symbol_db_engine_iterator_node_new),
	(sdb_engine_iterator_node_instance_init),
	(sdb_engine_iterator_node_finalize),