@@ -1,3 +1,9 @@
+2008-10-22  Sébastien Granjoux  <seb.sfo@free.fr>
+
+	* plugins/macro/macros.xml,
+	plugins/file-wizard/file.c:
+	Fix #552996 - New file dialog misses BSD licence
+
 2008-10-18  Sébastien Granjoux  <seb.sfo@free.fr>
 
 	* plugins/project-manager/plugin.c,
